# gatekeeper-exp-xavier

./: .gitignore  .gitmodules  Dockerfile.vimrc  README.md  nvpmodel.conf  run.sh
colcon_ws/: Makefile  get_params.py  ping.py  pong.py
colcon_ws/maps/process_maps/: CMakeLists.txt  Manifest.toml  Project.toml  compare_maps.jl  process_maps.cpp  viz_pc.jl
colcon_ws/maps/run_0/clean_maps/: rototranslation.txt
colcon_ws/maps/run_0_backup/noisy_maps/: rototranslation.txt
colcon_ws/maps/run_1/clean_maps/: rototranslation.txt
colcon_ws/maps/run_1/noisy/: rototranslation.txt
colcon_ws/maps/run_1_backup_1/clean/: rototranslation.txt
colcon_ws/rosbag2_2023_09_13-12_38_24/: metadata.yaml
colcon_ws/rosbags/2024_01_08-11_42_52__run0_maps/: 2024_01_08-11_42_52__run0_maps_0.db3  metadata.yaml
colcon_ws/rosbags/2024_01_08-11_48_09__run0_maps_clean/: 2024_01_08-11_48_09__run0_maps_clean_0.db3  metadata.yaml
colcon_ws/rosbags/rosbag2_2023_09_15-19_14_06/: metadata.yaml
colcon_ws/rosbags/run0_raw/: metadata.yaml  run0_raw_0.db3
colcon_ws/rosbags/vo/raw_2024_01_11-16_35_19/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_11-16_40_23/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_11-16_44_04/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_11-16_59_54/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_07_48/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_13_13/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_13_56/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_15_42/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_19_34/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_22_19/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_23_32/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_26_26/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_29_31/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_30_56/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_36_02/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_44_58/: metadata.yaml
colcon_ws/rosbags/vo/raw_2024_01_12-17_47_15/: metadata.yaml
colcon_ws/src/all_launch/: CMakeLists.txt  package.xml
colcon_ws/src/all_launch/config/: config_nvblox.yaml  config_realsense.yaml  config_realsense2.yaml  config_vicon.yaml  mavlink-router.conf  nav2.yaml  nvblox.yaml  realsense.yaml  replan.xml
colcon_ws/src/all_launch/launch/: all_tsdf_debug.rviz  cert_tsdf_debug.rviz  esdf_debug.rviz  gatekeeper.launch.py  jps.launch.py  microXRCE.launch.py  nav2.launch.py  navigation_launch2.py  noisy_vicon.launch.py  nvblox.launch.py  px4.launch.py  record.launch.py  record_noisy.launch.py  rs.launch.py  rviz.launch.py  tsdf_debug.rviz  vicon.launch.py  vo_record.launch.py  vo_rs.launch.py
colcon_ws/src/all_launch/rviz_config/: all_tsdf.rviz  cesdf.rviz  depth_camera.rviz  esdf.rviz  vo.rviz
colcon_ws/src/gatekeeper/: package.xml  setup.cfg  setup.py
colcon_ws/src/gatekeeper/gatekeeper/: blind_follow.py  gatekeeper.py  mpc.py  (+8 more)
colcon_ws/src/image_republish/: CMakeLists.txt  package.xml
colcon_ws/src/image_republish/include/image_republish/: image_republisher.hpp
colcon_ws/src/image_republish/src/: image_republisher.cpp
colcon_ws/src/image_republish_2/: CMakeLists.txt  package.xml
colcon_ws/src/image_republish_2/src/: image_republisher.cpp
colcon_ws/src/nominal_planner/: package.xml  setup.cfg  setup.py
colcon_ws/src/process_bagfiles/: .gitignore  extract_esdfs.py  extract_pcls.py  plot_esdfs.py  plot_paths.py  sliceMap.py
colcon_ws/src/save_ply/: package.xml  setup.cfg  setup.py
(+36 files in other folders)
